--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: card, local: true) do |form| %>
+<%= form_for [@board, @card] do |form| %>
   <% if card.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(card.errors.count, "error") %> prohibited this card from being saved:</h2>
@@ -20,6 +20,11 @@
     <%= form.label :body %>
     <%= form.text_field :body, id: :card_body %>
   </div>
+
+  <%= form.hidden_field :user_id, value: current_user.id %>
+  <% if @board %>
+    <%= form.hidden_field :board_id, value: @board.id %>
+  <% end %>
 
   <div class="actions">
     <%= form.submit %>
