update view for remind

--- a/app/views/sr_remind_mailer/remind.text.erb
+++ b/app/views/sr_remind_mailer/remind.text.erb
@@ -1,3 +1,4 @@
 SrRemind#remind
 
-<%= @greeting %>, find me in app/views/sr_remind_mailer/remind.text.erb
+Hello <%= @user.username %>,
+Reminder for this <%= @card.title %>  
