--- a/app/views/sr_remind_mailer/remind.html.erb
+++ b/app/views/sr_remind_mailer/remind.html.erb
@@ -1,5 +1,6 @@
 <h1>SrRemind#remind</h1>
 
 <p>
-  <%= @greeting %>, find me in app/views/sr_remind_mailer/remind.html.erb
+  Hello <%= @user.username %>,
+  Reminder for this <%= @card.title %>  
 </p>
