--- a/app/views/boards/index.html.haml
+++ b/app/views/boards/index.html.haml
@@ -13,3 +13,5 @@
         %td= link_to 'Destroy', board, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
 = link_to 'New Board', new_board_path
+= link_to 'Cards', cards_path
+= link_to 'Home', root_path
