--- a/app/views/cards/index.html.haml
+++ b/app/views/cards/index.html.haml
@@ -5,14 +5,20 @@
     %tr
       %th Title
       %th Body
+      %th Board
+      %th Next Remind at         
       %th{:colspan => "3"}
   %tbody
     - @cards.each do |card|
       %tr
         %td= card.title
         %td= card.body
+        %td= card.board ? (link_to card.board.name, board_path(card.board)) : ""
+        %td= card.sr_events.first.next_review_at    
         %td= link_to 'Show', card
         %td= link_to 'Edit', edit_card_path(card)
         %td= link_to 'Destroy', card, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
 = link_to 'New Card', new_card_path
+= link_to 'Board', boards_path
+= link_to 'Home', root_path
