--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,13 @@
 %h1 Home#index
-%p Find me in app/views/home/index.html.erb
+- if user_signed_in?
+  %p
+    = link_to 'Board', boards_path
+  %p
+    = link_to 'Account', user_path
+  %p
+    = link_to 'Sign Out', destroy_user_session_path
+- else
+  %p
+    = link_to 'Sign Up', sign_up_path
+  %p
+    = link_to 'Sign In', sign_in_path
