--- a/app/views/cards/_form.html.haml
+++ b/app/views/cards/_form.html.haml
@@ -12,7 +12,7 @@
     = form.text_field :title, id: :card_title
   .field
     = form.label :body
-    = form.text_field :body, id: :card_body
+    = form.text_area :body, id: :card_body
   = form.hidden_field :user_id, value: current_user.id
   - if @board
     = form.hidden_field :board_id, value: @board.id
